@@ -2,6 +2,7 @@
 - Fix descriptor leak on enqueue failure (Steven Brzozowski)
 - Switch SHA256 hashing to openssl
 - Add --check-status to fapolicyd-cli
+- If fapolicyd is already running, exit
 
 1.1.3
 - Replace snprintf integer to char conversion with uitoa function
